--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ main {
   display: flex;
   justify-content: center;
   align-content: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 footer {
