--- a/index.css
+++ b/index.css
@@ -17,7 +17,9 @@ main {
   display: flex;
   justify-content: center;
   align-content: center;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
+  align-items: center;
+  
 }
 
 footer {
