--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ main {
   display: flex;
   justify-content: center;
   align-content: center;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   align-items: center;
   
 }
